Refs #91562; Fix blurry logo in PDF export

--- a/eea/climateadapt/theme/climateadaptv2/src/less/base.less
+++ b/eea/climateadapt/theme/climateadaptv2/src/less/base.less
@@ -104,18 +104,13 @@ a {
 .site-container ul,
 .site-container ol {
   padding-left: 1.5em;
+  padding-bottom: .8em;
   li:not(:last-child) {
     ul {
       padding-top: 0.5em;
     }
   }
 }
-
-#content-core ul,
-#content-core ol {
-  padding-bottom: 0.8em;
-}
-
 
 /* @group Invisibles */
 .hiddenStructure {
@@ -808,7 +803,7 @@ form .standard-button,
   font-size: 14px;
   padding-left: 0;
   margin-bottom: 1.5em;
-  list-style-type: none; 
+  list-style-type: none;
   li > ul {
     list-style-type: none;
     li:not(:last-of-type) {
