--- a/eea/climateadapt/theme/climateadaptv2/src/less/custom-print-pdf.less
+++ b/eea/climateadapt/theme/climateadaptv2/src/less/custom-print-pdf.less
@@ -26,6 +26,22 @@
     background-color: #fff;
   }
 
+  .logo {
+    a {
+      text-align: center;
+      margin: 20pt 42pt 0;
+    }
+    .logo-img-print {
+      display: block !important;
+      height: 35pt;
+    }
+
+    .logo-img {
+      display: none;
+    }
+  }
+
+
   #content,
   .content-sidebar,
   .content-column {
@@ -48,6 +64,7 @@
     overflow: unset;
   }
 
+  /* hidden elements */
   .documentExportActions,
   .breadcrumbs,
   .mobile-menu,
