--- a/eea/climateadapt/theme/climateadaptv2/src/less/topmenu.less
+++ b/eea/climateadapt/theme/climateadaptv2/src/less/topmenu.less
@@ -10,6 +10,9 @@
   margin-top: 4px;
   a {
     display: block;
+    .logo-img-print {
+      display: none;
+    }
   }
 }
 
